--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>CV - Carlos León</title>
+    <title>Carlos León Ovando - Resume</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href='style.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <span class="text"><a href="li0nxd@outlook.com">li0nxd@Outlook.com</a></span>
+                        <span class="text"><a href="mailto:li0nxd@outlook.com">Li0nxD@Outlook.com</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                        <span class="text">Maipú, Santiago, Chile</span>
+                        <span class="text">Maipú, Santiago - Chile</span>
                     </li>
                 </ul>
             </div>
@@ -44,28 +44,28 @@
                 <ul>
                     <li>
                         <h5>2019 - 2021</h5>
-                        <h4>Graduate in Software Development</h4>
-                        <h4>AIEP, Professional Institute</h4>
+                        <h4><a target="_blank" href="https://drive.google.com/file/d/1-VNeQJ96lZw5KXO4G_OAgwI8UI85aiTD/view?usp=sharing">Graduate in Software Development</a></h4> 
+                        <h4>AIEP, Professional Institute.</h4>
                     </li>
                     <li>
                         <h5>2021</h5>
                         <h4><a target="_blank" href="https://drive.google.com/file/d/14gBj_MVkY9zTv_ToMF5mk5Z9QobYUhWv/view">Certificate of Software<br>Quality</a></h4>
-                        <h4>AIEP, Professional Institute</h4>
+                        <h4>AIEP, Professional Institute.</h4>
                     </li>
                     <li>
                         <h5>2021</h5>
                         <h4><a target="_blank" href="https://drive.google.com/file/d/14SN5z2uel5x57rLXX1g6kslDzdV-LEE8/view">Certificate of Software Programming</a></h4>
-                        <h4>AIEP, Professional Institute</h4>
+                        <h4>AIEP, Professional Institute.</h4>
                     </li>
                     <li>
                         <h5>2021</h5>
                         <h4><a target="_blank" href="https://drive.google.com/file/d/1XHBCIDPZbY0L_W6A17VxsAveN5ghnl6k/view">Certificate of Web Application Programming</a></h4>
-                        <h4>AIEP, Professional Institute</h4>
+                        <h4>AIEP, Professional Institute.</h4>
                     </li>
                     <li>
                         <h5>2021</h5>
                         <h4><a target="_blank" href="https://drive.google.com/file/d/19Z0XQnBp9DfItwbHYCjJ8E36WBuLQ1CV/view">Certificate of Hardware & Software Support</a></h4>
-                        <h4>AIEP, Professional Institute</h4>
+                        <h4>AIEP, Professional Institute.</h4>
                     </li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
                     <span class="text">English</span>
                     <span class="percent">
                         <span class="percent">
-                            <div style="width: 80%;"></div>
+                            <div style="width: 70%;"></div>
                         </span>
                     </span>
                 </li>
@@ -94,9 +94,9 @@
 
         <div class="right_side">
             <div class="about">
-                <h2 class="title2">Profile</h2> <!--Perfil-->
-                <p>Innovative, detail-oriented professional with ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. 
-                    Always willing to learn, and share knowledge with teammates.</p>
+                <h2 class="title2">About Me</h2> <!--Perfil-->
+                <p>Innovative, detail-oriented professional with experience in software development across diverse industries. 
+                Ability to assess and manage complex obstacles; viewed as a proficient troubleshooter. Always willing to learn, and share knowledge with teammates.</p>
             </div>
             <!--Experiencia Laboral-->
             <div class="about">
@@ -138,19 +138,19 @@
                 <div class="box">
                     <h4>Html/CSS</h4>
                     <div class="percent">
-                        <div style="width: 65%;"></div>
+                        <div style="width: 70%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Git</h4>
+                    <h4>GIT</h4>
                     <div class="percent">
-                        <div style="width: 50%;"></div>
+                        <div style="width: 70%;"></div>
                     </div>
                 </div>
                 <div class="box">
                     <h4>JavaScript</h4>
                     <div class="percent">
-                        <div style="width: 40%;"></div>
+                        <div style="width: 55%;"></div>
                     </div>
                 </div>
                 <div class="box">
@@ -162,13 +162,13 @@
                 <div class="box">
                     <h4>Object Oriented Programming</h4>
                     <div class="percent">
-                        <div style="width: 30%;"></div>
+                        <div style="width: 68%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>SQL</h4>
+                    <h4>SQL/NoSQL</h4>
                     <div class="percent">
-                        <div style="width: 60%;"></div>
+                        <div style="width: 70%;"></div>
                     </div>
                 </div>
                 <div class="box">
