--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="box">
                     <div class="year_company">
                         <h5>2023</h5>
-                        <h5>IBM</h5>
+                        <h5>Kibernum</h5>
                     </div>
                     <div class="text">
                         <h4>Desarrollador Salesforce</h4>
@@ -128,11 +128,11 @@
                 <div class="box">
                     <div class="year_company">
                         <h5>2022</h5>
-                        <h5>Sophos Solutions</h5>
+                        <h5>Kibernum</h5>
                     </div>
                     <div class="text">
                         <h4>Desarrollador Salesforce</h4>
-                        <p>Desarrollador Salesforce para cliente Banco Itau. Implementación de clases APEX, triggers, automatización de procesos, workflows, objetos personalizados, campos personalizados, conjunto de permisos, grupos de permisos, entre otros.
+                        <p>Desarrollador Salesforce para cliente Banco Estado. Implementación de clases APEX, triggers, automatización de procesos, workflows, objetos personalizados, campos personalizados, conjunto de permisos, grupos de permisos, entre otros.
                         Además, implementación de flexipage, tableros, reportes, tipos de reporte, etc. </p>
                     </div>
                 </div>
